syntax = "proto3";
package io.bsoa.rpc.grpc;
option java_package = "io.bsoa.rpc.grpc.model";
message TestRequest{
    string name  = 1;
    int32 id    = 2;
}
message TestResponse{
    string message = 1;
}